update code response message title

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -803,6 +803,7 @@
   "Generating by": "Wird erstellt von",
   "Thinking...": "Denken...",
   "thinking...": "denken...",
+  "Replying...": "Antwortend...",
   "have thought deeply": "habe tief nachgedacht",
   "What does this picture mean?": "Was bedeutet dieses Bild?",
   "Explain this picture": "Erklären Sie dieses Bild",
