--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "",
   "Thinking...": "",
   "thinking...": "",
+  "Replying...": "",
   "have thought deeply": "",
   "What does this picture mean?": "",
   "Explain this picture": "",
