--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "Generándose por",
   "Thinking...": "Pensando...",
   "thinking...": "pensando...",
+  "Replying...": "Contestando...",
   "have thought deeply": "he pensado profundamente",
   "What does this picture mean?": "¿Qué significa esta imagen?",
   "Explain this picture": "Explica esta imagen",
