--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -801,6 +801,7 @@
   "Generating by": "En train d'être généré par",
   "Thinking...": "En train de penser...",
   "thinking...": "en train de penser...",
+  "Replying...": "Répondant...",
   "have thought deeply": "ai pensé profondément",
   "What does this picture mean?": "Que signifie cette image?",
   "Explain this picture": "Expliquez cette image",
