--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "Sedang dihasilkan oleh",
   "Thinking...": "Sedang berpikir...",
   "thinking...": "sedang berpikir...",
+  "Replying...": "Menjawab...",
   "have thought deeply": "telah berpikir mendalam",
   "What does this picture mean?": "Apa arti gambar ini?",
   "Explain this picture": "Jelaskan gambar ini",
