--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "によって生成されている",
   "Thinking...": "考え中...",
   "thinking...": "考え中...",
+  "Replying...": "はんしんちゅう...",
   "have thought deeply": "深く考えた",
   "What does this picture mean?": "この絵は何を意味しますか？",
   "Explain this picture": "この絵を説明してください",
