--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "에 의해 생성되고 있는",
   "Thinking...": "생각 중...",
   "thinking...": "생각 중...",
+  "Replying...": "답변 중...",
   "have thought deeply": "깊이 생각했다",
   "What does this picture mean?": "이 그림은 무슨 의미입니까?",
   "Explain this picture": "이 그림을 설명해 주세요",
