--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "Está sendo gerado por",
   "Thinking...": "Pensando...",
   "thinking...": "pensando...",
+  "Replying...": "Respondendo...",
   "have thought deeply": "tenho pensado profundamente",
   "What does this picture mean?": "O que significa esta imagem?",
   "Explain this picture": "Explique esta imagem",
