--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -801,6 +801,7 @@
   "Generating by": "Генерируется кем-то",
   "Thinking...": "Думаю...",
   "thinking...": "Думаю...",
+  "Replying...": "Отвечая...",
   "have thought deeply": "глубоко подумал",
   "What does this picture mean?": "Что означает это изображение?",
   "Explain this picture": "Объясните это изображение",
