--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -801,6 +801,7 @@
   "Generating by": "กำลังถูกสร้างโดย",
   "Thinking...": "กำลังคิดอยู่...",
   "thinking...": "กำลังคิดอยู่...",
+  "Replying...": "กำลังตอบคำถาม...",
   "have thought deeply": "คิดอย่างลึกซึ้ง",
   "What does this picture mean?": "ภาพนี้หมายถึงอะไร?",
   "Explain this picture": "อธิบายภาพนี้ด้วย",
