--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -802,6 +802,7 @@
   "Generating by": "Tarafından oluşturuluyor",
   "Thinking...": "Düşünüyor...",
   "thinking...": "düşünüyor...",
+  "Replying...": "Cevap veriyor...",
   "have thought deeply": "Derinlemesine düşünmüştüm",
   "What does this picture mean?": "Bu resim ne anlama geliyor?",
   "Explain this picture": "Bu resmi açıkla",
