--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -793,6 +793,7 @@
   "Generating by": "Đang được tạo ra bởi",
   "Thinking...": "Đang suy nghĩ...",
   "thinking...": "Đang suy nghĩ...",
+  "Replying...": "Đang trả lời...",
   "have thought deeply": "đã suy nghĩ sâu sắc",
   "What does this picture mean?": "Bức tranh này có nghĩa là gì?",
   "Explain this picture": "Giải thích bức tranh này",
