--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -801,6 +801,7 @@
   "Generating by": "正在生成由",
   "Thinking...": "正在思考...",
   "thinking...": "思考中...",
+  "Replying...": "模型回复中...",
   "have thought deeply": "已深度思考",
   "What does this picture mean?": "这张图是什么意思？",
   "Explain this picture": "解释这张图",
