--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -834,5 +834,6 @@
   "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "ระบุว่าคำถามล่าสุดเกี่ยวกับเรื่องอะไร, กรองคำที่ซ้ำซ้อน, ชี้ทาง และไม่มีค่าคร่าวสำคัญออกไป และแสดงเฉพาะเนื้อหาของคำถามจากผู้ใช้ โดยมีจำนวนคำสูงสุด 10 คำเท่านั้น.",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดอัปเกรดเป็น VIP",
   "The number of attempts has exceeded the limit. Please complete KYC.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดให้ข้อมูลการยืนยันตัวตน KYC เสร็จสิ้น",
-  "The number of attempts has exceeded the limit. Please create Wallet.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดสร้างกระเป๋าเงิน Digitaล Wallet"
+  "The number of attempts has exceeded the limit. Please create Wallet.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดสร้างกระเป๋าเงิน Digitaล Wallet",
+  "Summarize web content": "สรุปเนื้อหาในเว็บไซต์"
 }
