update reward code

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -837,5 +837,6 @@
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte aktualisieren Sie auf VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte führen Sie die KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte erstellen Sie ein Wallet.",
-  "Summarize web content": "Zusammenfasse Website-Inhalt"
+  "Summarize web content": "Zusammenfasse Website-Inhalt",
+  "The reward program has ended !": "Das Belohnungsprogramm ist beendet !"
 }
