--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -836,6 +836,7 @@
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "",
   "The number of attempts has exceeded the limit. Please complete KYC.": "",
   "The number of attempts has exceeded the limit. Please create Wallet.": "",
-  "Summarize web content": ""
+  "Summarize web content": "",
+  "The reward program has ended !": ""
 }
 
