--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -836,5 +836,6 @@
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "O número de tentativas excedeu o limite. Por favor, atualize para o VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "O número de tentativas excedeu o limite. Por favor, conclua o KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "O número de tentativas excedeu o limite. Por favor, crie uma carteira.",
-  "Summarize web content": "Resumir o conteúdo web"
+  "Summarize web content": "Resumir o conteúdo web",
+  "The reward program has ended !": "O programa de recompensas terminou !"
 }
