update invitee dgc amount 3000 and end time

--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -285,9 +285,9 @@
   "Input commands": "Ввод команд",
   "Interface": "Интерфейс",
   "Invalid Tag": "Неверный тег",
-  "Invite a friend to create a wallet to earn 6000 DGC rewards,you friend will also earn 1000 DGC": "Пригласить друга создать кошелек и получить 6000 DGC в качестве вознаграждения, ваш друг также получит 1000 DGC",
+  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Пригласить друга создать кошелек и получить 3000 DGC в качестве вознаграждения, ваш друг также получит 1000 DGC",
   "Invite friends now": "Пригласить друзей сейчас",
-  "Invite friends to create a wallet to earn 6000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Пригласить друзей создать кошелек и получить 6000 DGC в качестве вознаграждения, ваши друзья также получат 1000 DGC",
+  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Пригласить друзей создать кошелек и получить 3000 DGC в качестве вознаграждения, ваши друзья также получат 1000 DGC",
   "Invite Friends to Earn DGC Rewards": "Пригласить друзей, чтобы получить вознаграждение DGC",
   "invite new user": "Пригласить нового пользователя",
   "January": "Январь",
@@ -743,7 +743,7 @@
   "II. Referral Reward": "II. Премия за рекомендацию",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Пользователи кошельков, которые завершили процедуру идентификации KYC, приглашают других создать кошельки и также завершить процедуру KYC.",
   "The number of people invited each day should not exceed 20.": "Количество приглашенных людей в день не должно превышать 20.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is March 14th.": "Для каждого приглашенного человека, и если приглашенный человек последовательно входит в систему трижды, пригласивший получит вознаграждение в размере <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，Срок окончания данной деятельности — 14 марта.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-04-11 00:00:00.": "Для каждого приглашенного человека, и если приглашенный человек последовательно входит в систему трижды, пригласивший получит вознаграждение в размере <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，Дата окончания мероприятия до 2025-04-11 00:00:00.",
   "III. Clock in Reward": "III. Премия за отметку времени",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Премия за отметку времени действительна в течение <span style='color: rgba(184, 142, 86, 1);'>60</span> дней после завершения аутентификации.",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Войдя в систему и отметившись в течение <span style='color: rgba(184, 142, 86, 1);'>1</span> дня, можно заработать <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC в виде премии; максимальное количество премий за отметку времени - <span style='color: rgba(184, 142, 86, 1);'>30</span>.",
