--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Nhap các lệnh",
   "Interface": "Giao diện",
   "Invalid Tag": "Thẻ không hợp lệ",
-  "Invite a friend to create a wallet to earn 6000 DGC rewards,you friend will also earn 1000 DGC": "Mời một bạn tạo ví để nhận thưởng DGC 6000, bạn bè của bạn cũng sẽ nhận được 1000 DGC",
+  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Mời một bạn tạo ví để nhận thưởng DGC 3000, bạn bè của bạn cũng sẽ nhận được 1000 DGC",
   "Invite friends now": "Mời bạn bè ngay bây giờ",
-  "Invite friends to create a wallet to earn 6000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Mời bạn bè tạo ví để nhận thưởng DGC 6000, bạn bè của bạn cũng sẽ nhận được 1000 DGC thưởng.",
+  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Mời bạn bè tạo ví để nhận thưởng DGC 3000, bạn bè của bạn cũng sẽ nhận được 1000 DGC thưởng.",
   "Invite Friends to Earn DGC Rewards": "Mời bạn bè để nhận thưởng DGC",
   "invite new user": "Mời người dùng mới",
   "January": "Tháng 1",
@@ -735,7 +735,7 @@
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Người dùng ví điện tử đã hoàn thành thủ tục KYC sẽ mời người khác tạo một ví điện tử và hoàn thành thủ tục KYC.",
   "The number of people invited each day should not exceed 20.": "Số lượng người được mời mỗi ngày không được vượt quá 20 người.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is March 14th.": "Với mỗi người được mời, và nếu người được mời đăng nhập liên tiếp ba lần, người mời sẽ nhận được phần thưởng là <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, Ngày chấm dứt của hoạt động là ngày 14 tháng 3.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-04-11 00:00:00.": "Với mỗi người được mời, và nếu người được mời đăng nhập liên tiếp ba lần, người mời sẽ nhận được phần thưởng là <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, Ngày chấm dứt của hoạt động là đến 2025-04-11 00:00:00.",
   "III. Clock in Reward": "III. Thưởng cho việc check-in",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Phần thưởng cho việc check-in có hiệu lực trong <span style='color: rgba(184, 142, 86, 1);'>60</span> ngày sau khi hoàn thành xác thực.",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Đăng nhập và check-in trong <span style='color: rgba(184, 142, 86, 1);'>1</span> ngày có thể kiếm được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; tối đa <span style='color: rgba(184, 142, 86, 1);'>30</span> phần thưởng cho việc check-in.",
