--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -285,9 +285,9 @@
   "Input commands": "Commandes d'entrée",
   "Interface": "Interface",
   "Invalid Tag": "Tag invalide",
-  "Invite a friend to create a wallet to earn 6000 DGC rewards,you friend will also earn 1000 DGC": "Invitez un ami à créer un portefeuille pour gagner 6000 DGC, votre ami gagnera également 1000 DGC",
+  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Invitez un ami à créer un portefeuille pour gagner 3000 DGC, votre ami gagnera également 1000 DGC",
   "Invite friends now": "Invitez des amis maintenant",
-  "Invite friends to create a wallet to earn 6000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Invitez des amis à créer un portefeuille pour gagner 6000 DGC, vos amis gagneront également 1000 DGC",
+  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Invitez des amis à créer un portefeuille pour gagner 3000 DGC, vos amis gagneront également 1000 DGC",
   "Invite Friends to Earn DGC Rewards": "Invitez des amis pour gagner des récompenses en DGC",
   "invite new user": "Inviter un nouvel utilisateur",
   "January": "Janvier",
@@ -743,7 +743,7 @@
   "II. Referral Reward": "II. Récompense pour la recommandation",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Les utilisateurs du portefeuille qui ont effectué la procédure de KYC invitent d'autres personnes à créer des portefeuilles et à effectuer la procédure de KYC.",
   "The number of people invited each day should not exceed 20.": "Le nombre de personnes invitées chaque jour ne doit pas dépasser 20.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is March 14th.": "Pour chaque personne invitée, et si la personne invitée se connecte pendant trois fois consécutives, l'invitateur recevra une récompense de <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，La date limite de l'activité est le 14 mars.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-04-11 00:00:00.": "Pour chaque personne invitée, et si la personne invitée se connecte pendant trois fois consécutives, l'invitateur recevra une récompense de <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC，La date limite de l'activité est le 2025-04-11 00:00:00.",
   "III. Clock in Reward": "III. Récompense pour le pointage",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "La récompense pour le pointage est valide pendant <span style='color: rgba(184, 142, 86, 1);'>60</span> jours après la fin de l'authentification.",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Se connecter et effectuer le pointage pendant <span style='color: rgba(184, 142, 86, 1);'>1</span> jour permet d'obtenir des récompenses de <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ; maximum de <span style='color: rgba(184, 142, 86, 1);'>30</span> récompenses pour le pointage.",
