--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -286,9 +286,9 @@
   "Input commands": "Comandos de entrada",
   "Interface": "Interface",
   "Invalid Tag": "Tag inválida",
-  "Invite a friend to create a wallet to earn 6000 DGC rewards,you friend will also earn 1000 DGC": "Convide um amigo para criar uma carteira e ganhar 6000 DGC, seu amigo também ganhará 1000 DGC",
+  "Invite a friend to create a wallet to earn 3000 DGC rewards,you friend will also earn 1000 DGC": "Convide um amigo para criar uma carteira e ganhar 3000 DGC, seu amigo também ganhará 1000 DGC",
   "Invite friends now": "Convide seus amigos agora",
-  "Invite friends to create a wallet to earn 6000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Convide seus amigos para criar uma carteira e ganhar 6000 DGC, seus amigos também ganharão 1000 DGC",
+  "Invite friends to create a wallet to earn 3000 DGC rewards,your friends will also earn 1000 DGC rewards.": "Convide seus amigos para criar uma carteira e ganhar 3000 DGC, seus amigos também ganharão 1000 DGC",
   "Invite Friends to Earn DGC Rewards": "Convide seus amigos para ganhar recompensas em DGC",
   "invite new user": "Convidar um novo usuário",
   "January": "Janeiro",
@@ -744,7 +744,7 @@
   "II. Referral Reward": "II. Recompensa por Indicação",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "Os usuários da carteira digital que concluíram o KYC convidam outras pessoas a criar carteiras digitais e a concluir o KYC.",
   "The number of people invited each day should not exceed 20.": "O número de pessoas convidadas a cada dia não deve exceder 20.",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is March 14th.": "Para cada pessoa convidada, e se a pessoa convidada fizer login continuamente por três vezes, o convidante receberá uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, A data-limite da atividade é 14 de março.",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-04-11 00:00:00.": "Para cada pessoa convidada, e se a pessoa convidada fizer login continuamente por três vezes, o convidante receberá uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, A data-limite da atividade é 2025-04-11 00:00:00.",
   "III. Clock in Reward": "III. Recompensa por Check-in",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "A recompensa por check-in é válida por <span style='color: rgba(184, 142, 86, 1);'>60</span> dias após a conclusão da autenticação.",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Fazer login e check-in por <span style='color: rgba(184, 142, 86, 1);'>1</span> dia pode ganhar recompensas de <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; máximo de <span style='color: rgba(184, 142, 86, 1);'>30</span> recompensas por check-in.",
