--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -695,7 +695,7 @@
   "Optimize code writing": "",
   "Please select at least one model.": "",
   "You can select up to four models at most.": "",
-  "Your friend not complete the KYC verification.": "",
+  "Your friend needs to complete the check-in three times.": "",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "",
   "Total": "",
   "Channel Distribution": "",
