--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -694,7 +694,7 @@
   "Optimize code writing": "Optimiser l'écriture de code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
   "You can select up to four models at most.": "Vous pouvez sélectionner jusqu'à quatre modèles au maximum.",
-  "Your friend not complete the KYC verification.": "Votre ami n'a pas terminé la vérification KYC.",
+  "Your friend needs to complete the check-in three times.": "Ton ami doit effectuer l'enregistrement trois fois.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "Le KeyStore a été téléchargé automatiquement. Si nécessaire, vous pouvez télécharger le JSON manuellement ou copier la clé privée.",
   "Total": "Total",
   "Channel Distribution": "Distribution de canaux",
