--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -695,7 +695,7 @@
   "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
   "You can select up to four models at most.": "Anda dapat memilih hingga empat model terbanyak.",
-  "Your friend not complete the KYC verification.": "Teman Anda belum menyelesaikan verifikasi KYC.",
+  "Your friend needs to complete the check-in three times.": "Temanmu perlu menyelesaikan pendaftaran sebanyak tiga kali.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "KeyStore telah diunduh secara otomatis. Jika perlu, Anda dapat mengunduh JSON secara manual atau menyalin kunci privat.",
   "Total": "Total",
   "Channel Distribution": "Distribusi Saluran",
