--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -694,7 +694,7 @@
   "Optimize code writing": "优化写代码功能",
   "Please select at least one model.": "请至少选择一个模型。",
   "You can select up to four models at most.": "你最多可以选择四个模型。",
-  "Your friend not complete the KYC verification.": "你的朋友没有完成 KYC 验证。",
+  "Your friend needs to complete the check-in three times.": "你的朋友需要完成三次签到。",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "密钥库已自动下载。如有必要，你可以手动下载 JSON 或复制私钥。",
   "Total": "总数",
   "Channel Distribution": "渠道分布",
