--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -836,5 +836,8 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "Количество попыток превысило лимит. Пожалуйста, выполните процедуру идентификации KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Количество попыток превысило лимит. Пожалуйста, создайте кошелек.",
   "Summarize web content": "Сократить содержание веб-страницы",
-  "The reward program has ended !": "Программа вознаграждений завершена !"
+  "The reward program has ended !": "Программа вознаграждений завершена !",
+  "Webpage Subscription and Data Insights": "Подписка на веб - страницы и аналитика данных",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Автоматически собирать подписку на контент веб - страниц с помощью крупных моделей и проводить анализ данных для достижения реального времени отслеживания информации и глубоких бизнес - аналитических выводов.",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Пожалуйста, введите контент в соответствии с шаблоном: [URL веб - сайта][Анализируйте контент веб - сайта]"
 }
