--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -838,5 +838,8 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte führen Sie die KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte erstellen Sie ein Wallet.",
   "Summarize web content": "Zusammenfasse Website-Inhalt",
-  "The reward program has ended !": "Das Belohnungsprogramm ist beendet !"
+  "The reward program has ended !": "Das Belohnungsprogramm ist beendet !",
+  "Webpage Subscription and Data Insights": "Webseiten-Abonnement und Datenerkenntnisse",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Automatisch den abonnierten Inhalt von Webseiten mithilfe von großen Modellen crawlen und eine Datenanalyse durchführen, um eine Echtzeit-Informationsverfolgung und tiefgreifende Unternehmenserkenntnisse zu erzielen.",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Bitte geben Sie den Inhalt gemäß dem folgenden Muster ein: [Website-URL][Analysieren Sie den Website-Inhalt]"
 }
