--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -837,6 +837,9 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "",
   "The number of attempts has exceeded the limit. Please create Wallet.": "",
   "Summarize web content": "",
-  "The reward program has ended !": ""
+  "The reward program has ended !": "",
+  "Webpage Subscription and Data Insights": "",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": ""
 }
 
