--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -837,5 +837,8 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "Jumlah percobaan telah melebihi batas. Tolong selesaikan KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Jumlah percobaan telah melebihi batas. Tolong buat dompet digital Wallet.",
   "Summarize web content": "Ringkaskan isi halaman web",
-  "The reward program has ended !": "Program penghargaan telah berakhir !"
+  "The reward program has ended !": "Program penghargaan telah berakhir !",
+  "Webpage Subscription and Data Insights": "Berlangganan Halaman Web dan Wawasan Data",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Otomatis mengumpulkan konten halaman web yang telah diabonikan melalui model besar dan melakukan analisis data untuk mencapai pelacakan informasi secara real-time dan wawasan bisnis yang mendalam.",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Silakan masukkan konten sesuai dengan templat: [URL situs web][Analisis konten situs web]"
 }
