--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -837,5 +837,8 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "시도 횟수가 제한을 초과했습니다. KYC를 완료하십시오.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "시도 횟수가 제한을 초과했습니다. 지갑을 생성하십시오.",
   "Summarize web content": "웹 페이지 내용을 요약하다",
-  "The reward program has ended !": "보상 프로그램이 종료되었습니다 !"
+  "The reward program has ended !": "보상 프로그램이 종료되었습니다 !",
+  "Webpage Subscription and Data Insights": "웹페이지 구독 및 데이터 인사이트",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "대규모 모델을 통해 웹페이지의 가입된 콘텐츠를 자동으로 크롤링하고 데이터 분석을 수행하여 실시간 정보 추적 및 심층 비즈니스 인사이트를 달성합니다.",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "다음 템플릿에 따라 내용을 입력하세요: [웹사이트 URL][웹사이트 콘텐츠 분석]"
 }
