--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -837,5 +837,8 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "Deneme sayısı sınırı aştı. Lütfen KYC'yı tamamlayın.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Deneme sayısı sınırı aştı. Lütfen bir cüzdan oluşturun.",
   "Summarize web content": "Web sayfası içeriğini özetle",
-  "The reward program has ended !": "Ödül programı sonlandı !"
+  "The reward program has ended !": "Ödül programı sonlandı !",
+  "Webpage Subscription and Data Insights": "Web Sayfası Aboneliği ve Veri Gözleri",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Büyük modeller aracılığıyla abone olduğunuz web sayfalarındaki içeriği otomatik olarak tarayın ve veri analizi yaparak gerçek zamanlı bilgi izleme ve derin bir şekilde iş dünyası insights'larını sağlayın.",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Lütfen şablona göre içeriği girin: [Web sitesi URL'si][Web sitesi içeriğini analiz edin]"
 }
