--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -836,5 +836,8 @@
   "The number of attempts has exceeded the limit. Please complete KYC.": "请求次数已超过限制。请完成实名认证KYC。",
   "The number of attempts has exceeded the limit. Please create Wallet.": "请求次数已超过限制。请创建钱包。",
   "Summarize web content": "总结网页内容",
-  "The reward program has ended !": "奖励活动已经结束 !"
+  "The reward program has ended !": "奖励活动已经结束 !",
+  "Webpage Subscription and Data Insights": "网页订阅和数据洞察",
+  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "通过大模型自动化抓取网页订阅内容并进行数据分析，实现实时信息追踪与深度业务洞察",
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "请按照模板输入内容：[网址][分析网站内容]"
 }
